<resources>
    <string name="app_name">Shoe Store</string>
    <!--  ShoeList  -->
    <string name="label_shoes">Shoes</string>
    <string name="shoe_list_fragment_welcome_msg">Welcome</string>
    <string name="shoe_list_fragment_shoe_count_label">Shoe count: %d</string>

    <!--  LoginFragment  -->
    <string name="title_fragment_login">Login</string>
    <string name="login_label_email">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>

    <!--  WelcomeFragment  -->
    <string name="title_fragment_welcome">Welcome</string>
    <string name="welcome_label_welcome_dear_user">Welcome dear user!</string>
    <string name="welcome_label_description_text">App will let you see the list of the shoes</string>

    <!--  InstructionsFragment  -->
    <string name="title_fragment_instructions">Instructions</string>
    <string name="instructions_label_instruction1">View shoe list in main screen</string>
    <string name="instructions_label_instruction2">Click the add button to add new shoe</string>

    <string name="label_next">Next</string>

    <!--  ShoeDetailFragment  -->
    <string name="title_fragment_shoe_detail">Shoe Detail</string>
    <string name="shoe_detail_fragment_name_label">Name</string>
    <string name="shoe_detail_fragment_company_label">Company</string>
    <string name="shoe_detail_fragment_description_label">Description</string>
    <string name="shoe_detail_fragment_size_label">Size</string>
    <string name="shoe_detail_fragment_save_button">Save</string>
    <string name="shoe_detail_fragment_cancel_button">Cancel</string>
    <string name="shoe_detail_fragment_add_shoe_error">Please enter shoe name, company and size at least</string>
    <string name="shoe_list_fragment_action_logout">Logout</string>
</resources>
