<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeViewModel"
            type="github.informramiz.shoestore.view.onboarding.welcome.WelcomeViewModel" />
    </data>

    <!--    As the layout is just vertical views so LinearLayout is just fine-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp"
        tools:context=".view.onboarding.welcome.WelcomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_label_welcome_dear_user"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_label_description_text" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_next"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> welcomeViewModel.onNext() }"/>
    </LinearLayout>
</layout>